# FineVQ

./: pyproject.toml
data/: abcd2_test.jsonl  abcd_test.jsonl  abcd_test_en.jsonl  abcd_train_en.jsonl  inference2.json  inference_qa.json  livevqc_test_mos1.jsonl  qa_eval.json  yesno_test.jsonl  yesno_test_artifact.jsonl  yesno_test_blur.jsonl  yesno_test_color.jsonl  yesno_test_temp.jsonl
finevq/data/: abcd2_train.jsonl  abcd_train.jsonl  inference.json  livevqc.json  livevqc_train_mos1.jsonl  qa_abcd.json  qa_abcd2.json  qa_abcd_all.json  qa_abcd_en.json  qa_eval2.json  qa_yn.json  yesno_test_noise.jsonl
finevq/internvl/model/internvl_chat_infer/: modeling_internvl_chat.py
finevq/internvl/patch/: pad_data_collator.py
finevq/internvl/train/: inference_blur.py  inference_noise.py  inference_qa.py  qa_eval.py  stage1_train.py  stage2_eval_lora.py
finevq/shell/: eval.sh  infer_artifact.sh  infer_blur.sh  infer_temporal.sh  qa_eval.sh  qa_eval2.sh  qa_train.sh
internvl/model/internvl_chat/: modeling_internvl_chat.py
internvl/model/internvl_chat_infer/: configuration_internvl_chat.py  modeling_internvl_chat.py
internvl/model/internvl_chat_qa/: swin_backbone.py
internvl/model/internvl_chat_stage2/: __init__.py
internvl/model/internvl_chat_stage2_lora_improve_eval/: configuration_internvl_chat.py  modeling_internvl_chat.py
internvl/train/: dataset.py  inference.py  inference_artifact.py  inference_color.py  inference_temporal.py  qa_train.py  stage2_train.py
shell/: infer.sh  infer_QA.sh  infer_color.sh  infer_noise.sh  stage1_train.sh  stage2_train.sh
(+2 files in other folders)
