[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "finevq"
version = "0.1.0"
description = "Fine-grained Visual-Quantum representation"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pytorchvideo",
    "sentencepiece",
] # We leave this empty since you use --no-deps anyway

[tool.setuptools]
packages = { find = {} }
include-package-data = true

[tool.setuptools.package-data]
# This tells it: "Inside the internvl package, include all .json files"
"internvl" = ["*.json"]